
2017-10-27  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_apply_configuration): Refatoração para evitar processamento do background na inicialização
	* Added: Background Settings dialog
	* launchapps.c (lapps_set_conf): Função lapps_get_wallpaper_conf_path renomeada e criação de diretório de configuração para armazenar o background temporário

2017-10-26  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Labels redimensionados e workaraound para fixar as posições dos ícones

2017-10-25  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_shadow_icons): Função para acrescentar sombra aos ícones

2017-10-24  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Desfeitas alterações para scale prévio da imagem de background e ajustes nas sombra nos nomes das aplicações
	* Redimencionamento da imagem de background ao carregá-la

2017-10-23  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Add: applications names shadow
	* Add: launchapp-bg-default.jpg
	* Add: bg_default, catch MagickWand read image error Removed: bg_pix memory cache
	* Incluída MagickWand para criar efeito blur no background
	* Background saturado e pixelado: teste

2017-10-22  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Ajuste tamanho dos itens da tabela de ícones

2017-10-21  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Resolvido problema de travamento do painel e ajuste do espaçamento das linhas da tabela de ícones
	* Grid populado com sucesso e aplicações executadas com sucesso ao clicar no respectivo ícone

2017-10-20  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Icons lookups funcionando Icons grid ok

2017-10-19  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Mudando de grid para tabela, primeiro teste bem sucedido
	* Testado icon lookups com sucesso
	* Lista de aplicações funcionando sem crash, iniciando desenvolvimento do grid de ícones
	* Tentando resolver problema de segment fault ao abrir duas instancias da mesma aplicação
