@@ -1,6 +1,8 @@
 launchapps_images_DATA = \
 	launchapps.png \
-	launchapps-bg-default.jpg
+	launchapps-bg-default.jpg \
+	orange-indicator.png \
+	white-indicator.png
 	
 launchapps_imagesdir = $(datadir)/lxpanel/images
 
